imp(router & handle func stub): Updated api files & add handle function stub & register router and run
